# Generative_AI-AICSOT-2026

./: pyproject.toml  requirements.txt
Week_2/: .env.example  SUBMISSION.md  requirements.txt
Week_2/projects/: assignment.py  build1.py  build2.py  build3.py
week_1/: ChatBot.py  SUBMISSION.md  build1.py  build2.py
week_3/: SUBMISSION.md
week_3/project/: .env.example
week_3/project/tools/: files.py  papers.py  web.py
